overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -432,7 +432,6 @@ a:hover {
 }
 
 body {
-  overflow: hidden;
   background-color: #f4f6ff;
 }
 
