--- a/assets/scss/_404.scss
+++ b/assets/scss/_404.scss
@@ -9,7 +9,7 @@
 }
 
 body{
-  overflow:hidden;
+//   overflow:hidden;
   background-color: #f4f6ff;
 }
 
